cabal-version:       2.2
name:                AdventOfCode2021
version:             0.1.0.0
synopsis:            Advent of code - Season 2021
description:         Please see README.md
homepage:            https://github.com/guibou/AdventOfCode2021#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
copyright:           2021 Guillaume Bouchard
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable alltests
           main-is: MainAll.hs
           hs-source-dirs: src
           other-modules:     All, Utils, Path, Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17, Day18, Day19, Day20

           build-depends:
               base
               , text
               , weigh
  default-language:    Haskell2010
  default-extensions: TupleSections
                    , DeriveAnyClass
                    , StandaloneDeriving
                    , DeriveGeneric
                    , OverloadedStrings
                    , BangPatterns
                    , ViewPatterns
                    , PatternSynonyms
                    , ScopedTypeVariables
                    , BinaryLiterals
                    , TemplateHaskell
                    , PartialTypeSignatures
                    , QuasiQuotes
                    , GeneralizedNewtypeDeriving
                    , DerivingStrategies
                    , FlexibleContexts
                    , LambdaCase
                    , TypeApplications
                    , NamedFieldPuns
                    , MultiWayIf
  ghc-options: -Wall -Wno-missing-signatures -fwarn-incomplete-uni-patterns -Wno-missing-home-modules -Wno-deprecations -Wno-partial-type-signatures -O2 -Wno-missing-pattern-synonym-signatures
  repl-options: -interactive-print=Text.Pretty.Simple.pPrint

  build-depends:       base,
                       hspec,
                       megaparsec,
                       cryptohash,
                       base16-bytestring,
                       bytestring,
                       containers,
                       parallel,
                       time,
                       vector,
                       file-embed,
                       unordered-containers,
                       template-haskell,
                       memoize,
                       split,
                       here,
                       relude,
                       text,
                       union-find,
                       hex,
                       matrix,
                       hashable,
                       mtl,
                       generic-deriving,
                       JuicyPixels,
                       pqueue,
                       random,
                       sbv,
                       PyF,
                       ansi-terminal,
                       linear,
                       weigh,
                       besout,
                       lens,
                       generic-lens,
                       QuickCheck,
                       parser-combinators,
                       Earley,
                       monoidal-containers,
                       pretty-simple
  -- Set relude (with extra) as the default prelude
  mixins: base hiding (Prelude)
        , relude (Relude as Prelude
                 , Relude.Extra
                 , Relude.Unsafe
                 )


source-repository head
  type:     git
  location: https://github.com/guibou/AdventOfCode2021
